# dxil-signing

./: CMakeLists.txt  Dockerfile  README.md  dxcapi.h  main.cpp  simple.dxil  simple.hlsl
cpp/: dxcapi.h  main.cpp  vs2017.bat
dxil/extras/: dxcapi.h
rust/: Cargo.toml
rust/src/: main.rs
